# MAROONXDR

./: .gitignore  .pylintrc  .readthedocs.yaml  Installation_Guide.txt  README.md  changelog.md  my_reduction.py  noxfile.py  pyproject.toml  readme.txt  requirements.txt  setup.cfg  simple_test.py  test_reduction.py
.github/workflows/: testing.yml
doc/: Makefile  conf.py  index.rst  requirements.txt
doc/_static/: custom.css
doc/progmanuals/MAROONXDR_ProgManual/: conf.py  flows.rst  index.rst  intro.rst  legacy.rst  parameters.rst  primitives.rst  recipes.rst  tags.rst  tests.rst
doc/progmanuals/MAROONXDR_ProgManual/_static/: custom.css
doc/tutorials/MAROONXDR_Tutorial/: Makefile  conf.py  example_api.rst  example_cli.rst  index.rst  intro.rst
doc/usermanuals/MAROONXDR_UserManual/: conf.py  index.rst  instrument.rst  issues.rst  primitives.rst  recipes.rst  tips.rst
docs/source/: conf.py  index.rst
maroonx/: DRAGONS-X.code-workspace
maroonx_instruments/: __init__.py
maroonx_instruments/maroonx/: __init__.py  adclass.py  calibration_maroonx.py  lookup.py
maroonx_instruments/maroonx/tests/: test_calibration.py  test_maroonx.py
maroonxdr/maroonx/: maroonx_etalon_data.py  maroonx_etalon_fit.py  maroonx_plots.py  maroonx_utils.py  parameters_calibdb_maroonx.py  parameters_maroonx.py  parameters_maroonx_2D.py  parameters_maroonx_echelle.py  parameters_maroonx_spectrum.py  primitives_calibdb_maroonx.py  primitives_maroonx.py  primitives_maroonx_2D.py  primitives_maroonx_echelle.py  primitives_maroonx_spectrum.py
maroonxdr/maroonx/interactive/: __init__.py  spectrum_viewer.py
maroonxdr/maroonx/lookups/: maskdb.py  refwavelengthdb.py  siddb.py  timestamp_keywords.py  wavelengthdb.py
maroonxdr/maroonx/lookups/BPM/: README
maroonxdr/maroonx/lookups/SID/: README  SID_b.fits  SID_r.fits
maroonxdr/maroonx/lookups/WAVELENGTHS/: README.md
maroonxdr/maroonx/maroonx_echellespectrum/: __init__.py  echellespectrum.py  etalonspectrum.py  flatspectrum.py  maroonxspectrum.py  spectrum_utils.py  tharspectrum.py  wavelengthsolution.py
maroonxdr/maroonx/maroonx_fit/: __init__.py  maroon_x_fit_object.py  maroonx_fit.py  maroonx_fit_parameters.py  maroonx_fit_spectrum.py
maroonxdr/maroonx/recipes/: __init__.py
maroonxdr/maroonx/recipes/qa/: __init__.py  recipes_ECHELLE_SPECT.py  recipes_FLAT_SPECT.py
maroonxdr/maroonx/recipes/sq/: __init__.py  recipes_BIAS.py  recipes_BUNDLE.py  recipes_DARK.py  recipes_DYNAMICWAVECAL.py  recipes_DYNAMIC_WAVECAL.py  recipes_ECHELLE_SPECT.py  recipes_FLAT.py  recipes_FLAT_IMAGE.py  recipes_FLAT_SPECT.py  recipes_STATICWAVECAL.py
maroonxdr/maroonx/tests/: __init__.py  conftest.py  test_utils.py
maroonxdr/maroonx/tests/bundle/: __init__.py  test_bundle.py  test_bundle_export.py
maroonxdr/maroonx/tests/complete/: __init__.py  bundle.py  bundle_test.py  dark.py  dark_test.py  dynamic_wavecal_test  dynamic_wavecal_test.py  flat.py  flat_test.py  reduced_1D_test.py  science.py  science_test.py  test_bundle_export.py  wavecal.py
maroonxdr/maroonx/tests/echelle_extraction/: __init__.py  test_dark_subtraction.py  test_extraction.py  test_measure_blaze.py  test_stripe_retrieval.py  test_synthetic_dark.py  test_wavecal.py
maroonxdr/maroonx/tests/image/: __init__.py  straylight_test_prep.py  test_ND_filter_check.py  test_file_sorting.py  test_image_orientation_corrector.py  test_stack.py  test_var.py  (+3 more)
science_dir/: readme.txt
utilities/: conf_hdf2fits.py  fits_viewer.py  ref_wls_hdf2fits.py  split_arm_extensions.py  wl_combined_final_etalon_peakmodel_2020.hdf
(+22 files in other folders)
